# Maliev.GeometryService

./: .dockerignore  .gitignore  .pre-commit-config.yaml  10x10x10mm-cube.3mf  10x10x10mm-cube.step  10x10x10mm-cube.stl  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-develop.yml  ci-main.yml  ci-staging.yml  pr-validation.yml
k8s/: keda.yaml
specs/001-geometry-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-geometry-service/checklists/: requirements.md
specs/001-geometry-service/contracts/: asyncapi.yaml
src/: main.py
src/consumers/: upload_consumer.py
src/core/: config.py  geometry.py  observability.py  schemas.py
src/infrastructure/: storage.py
tests/: test_consumer.py  test_geometry.py
tests/assets/: broken.stl  cube.3mf  cube.iges  cube.stl  cube.stp
